把漏掉的补上

--- a/stucampus/templates/christmas/giftList.html
+++ b/stucampus/templates/christmas/giftList.html
@@ -90,6 +90,10 @@
                         <label class="weui-form-preview__label">被赠予人地址</label>
                         <span class="weui-form-preview__value">{{ gift.givengift.givenAdress }}</span>
                     </p>
+                    <p class="gift_status">
+                        <label class="weui-form-preview__label">礼物状态</label>
+                        <span class="weui-form-preview__value">{{ gift.isGet }}</span>
+                    </p>
                 </div>
             </div>
         {% endif %}
