--- a/stucampus/templates/christmas/giftList.html
+++ b/stucampus/templates/christmas/giftList.html
@@ -103,7 +103,7 @@
             <h2 data-account="{{ gifts_count }}">您还可以添加{{ gifts_count }}个礼物</h2>
         </div>
         <div class="weui-btn-area">
-                <a class="weui-btn weui-btn_primary weui-btn_disabled" href="javascript:;" id="gift-btn">点我添加礼物</a>
+                <a class="weui-btn weui-btn_primary weui-btn_disabled" href="javascript:;" {#id="gift-btn"#}>点我添加礼物</a>
         </div>
     {% endif %}
 {#        <div class="dialogs">#}
