字体以及背景图更新

--- a/stucampus/static/styles/bases.css
+++ b/stucampus/static/styles/bases.css
@@ -5,7 +5,7 @@
 }
 body{
     background-color: #eee;
-    background: url("/static/images/spring_bgc.png") fixed no-repeat;
+    background: url("/static/images/beginning_bgc.png") fixed no-repeat;
     background-position-y:80%;
     background-size:cover;
 }
@@ -34,7 +34,7 @@ body{
 	    left: 0;
 	    height: 3.466667rem;
 	    width: 100%;
-	    background-color: /*#5BC5BE*/ #fda335 ;/*font */
+	    background-color: /*#5BC5BE*/ #005e64 ;/*font */
 	    box-shadow: 0 0.2rem 0.2rem rgba(0,0,0,0.16);
 	    z-index: 999;
 	}
@@ -248,7 +248,7 @@ body{
 		width: 25rem;
 		padding:0 0 1.06667rem 0;
 		font-size: 0.6rem;
-		color: /*rgba(0,0,0,0.54)*/ #fda335 ; /*font */
+		color: /*rgba(0,0,0,0.54)*/ #005e64 ; /*font */
 		text-align: center;
 		font-family: "SourceHanSans-Light","Roboto-Light","Microsoft YaHei";
 	}
@@ -326,12 +326,12 @@ body{
 	    float: left;
 	}
 	.nav-active{
-	    color: /*#5BC5BE*/ #fda335  !important;/*font */
+	    color: /*#5BC5BE*/ #005e64  !important;/*font */
 	}
 	.now{
 	    position: absolute;
 	    height: 1.6rem !important;
-	    border-bottom: 4px solid /*#5BC5BE*/#fda335 ; /*font*/
+	    border-bottom: 4px solid /*#5BC5BE*/#005e64 ; /*font*/
 	    transition: left 0.3s ease-in-out;
 	    -moz-transition: left 0.3s ease-in-out; /* Firefox 4 */
 	    -webkit-transition: left 0.3s ease-in-out; /* Safari 和 Chrome */
