--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -11,7 +11,7 @@
     {% block keywords %}{% endblock %}{% block description %}{% endblock %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="HandheldFriendly" content="true" />
-    <link href="/static/images/stulogo.png" type="image/x-icon" rel="shortcut icon" />
+    <link href="/static/images/chingMing.png" type="image/x-icon" rel="shortcut icon" />
     <!--[if IE]>
     {{ 'ie-fix.css' | as_css }}
     <![endif]-->
@@ -88,7 +88,7 @@
     </div>
 
     <a href="javascript:void(0)" class="fixed-logo">
-        <img src="/static/images/beginning_logo.png" alt="" />
+        <img src="/static/images/chingMing.png" alt="" />
     </a>
     {% block header %}
     {% endblock %}
