update the index.html to add the youth-voice
operate by using the edit in git , so...don't learn me

--- a/stucampus/templates/index.html
+++ b/stucampus/templates/index.html
@@ -102,6 +102,7 @@
                         <a href="http://www.lib.szu.edu.cn/" target="_blank">图书馆</a>
                         <a href="http://www.szu.edu.cn/tv/" target="_blank">网上电视</a>
                         <a href="http://192.168.2.113/" target="_blank">火车订票</a>
+                        <a href="http://qnzs.youth.cn/" target="_blank">青年之声</a>
                     </div>
                     <div class="nav-content">
                         <a href="http://192.168.2.20/" target="_blank">教务管理</a>
