added an introduction of STUTV

--- a/stucampus/templates/dreamer/index.html
+++ b/stucampus/templates/dreamer/index.html
@@ -95,32 +95,34 @@
             脚踏实地，这里成即有所行
         </p>
     </div>
-        <div class="top"></div>
-        <div class="foot"></div>
     </div>
     <div class="section item-2">
         <div class="container">
             <h class='hidden-xs hidden-sm page2-title'>基本部门</h>
             <div class="row">
-                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
+                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-2">
                     <a href="#" ><img class="act" onclick="introduce(1)" id="cb" src="/static/images/dreamer/images/page-2/cb.png" alt="" ></a>
                     <h4>采编部</h4>
                 </div>
-                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
+                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-2">
                     <a href="#" ><img class="act" onclick="introduce(2)" id="js" src="/static/images/dreamer/images/page-2/js.png" alt=""></a>
                     <h4>技术部</h4>
                 </div>
-                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
+                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-2">
                     <a href="#" ><img class="act" onclick="introduce(3)" id="xz" src="/static/images/dreamer/images/page-2/xz.png" alt=""></a>
                     <h4>行政部</h4>
                 </div>
-                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
+                <div class=" icon-infomation col-xs-4 col-sm-4 col-md-2">
                     <a href="#" ><img class="act" onclick="introduce(4)" id="sj" src="/static/images/dreamer/images/page-2/sj.png" alt=""></a>
                     <h4>设计部</h4>
                 </div>
-                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
+                <div class=" icon-infomation col-xs-4 col-sm-4 col-md-2">
                     <a href="#" ><img class="act" onclick="introduce(5)" id="yy" src="/static/images/dreamer/images/page-2/yy.png" alt=""></a>
                     <h4>运营部</h4>
+                </div>
+                <div class=" icon-infomation col-xs-4 col-sm-4 col-md-2">
+                    <a href="#" ><img class="act" onclick="introduce(6)" id="tv" src="/static/images/dreamer/images/page-2/tv.png" alt=""></a>
+                    <h4>学子头条君</h4>
                 </div>
                 <div class="clear"></div>
                 <div class="intro" id="intro"><p>点击部门了解更多</p></div>
