--- a/stucampus/templates/dreamer/index.html
+++ b/stucampus/templates/dreamer/index.html
@@ -142,7 +142,7 @@
                     <p id="error_msg"></p>
                     <p><label for="mobile">手机号码:</label><input type="text" id="mobile" name="mobile"></p>
                     <p><label for="email">邮箱:</label><input type="text" id="email" name="email"></p>
-                    <p><label for="gender">性别</label><select name="gender"><option value="m">男</option><option value="g">女</option></select></p>
+                    <p><label>性别</label><select><option>男</option><option>女</option></select></p>
                     <p>
                     <label>志愿部门:</label>
                     <select name="dept1">
