前端增加电视台选项

--- a/stucampus/templates/dreamer/index.html
+++ b/stucampus/templates/dreamer/index.html
@@ -152,6 +152,7 @@
                         <option value="xzb">行政部</option>
                         <option value="sjb">设计部</option>
                         <option value="yyb">运营部</option>
+                        <option value="yyb">电视台</option>
                     </select>
                     <select name="dept2">
                         <option value="--">可选</option>
@@ -160,6 +161,7 @@
                         <option value="xzb">行政部</option>
                         <option value="sjb">设计部</option>
                         <option value="yyb">运营部</option>
+                        <option value="yyb">电视台</option>
                     </select>
                     </p>
                     <p><label for="self_intro">自我介绍:</label><br><textarea name="self_intro" rows="5" cols="34" maxlength="500"placeholder="写下你的自我介绍(喜欢的运动、爱好特长等)"></textarea></p>
