--- a/stucampus/templates/dreamer/situation.html
+++ b/stucampus/templates/dreamer/situation.html
@@ -36,6 +36,7 @@
 		<th>运营部</th>
 		<th>采编部</th>
 		<th>行政部</th>
+		<th>电视台</th>
 		<th>报名总人数</th>
 	</tr>
 	<tr>
@@ -58,6 +59,10 @@
 		<td>
 			{{ xzb1 }}(一) {{ xzb2 }}(二)<br>
 			{{ xzbb }}(男) {{ xzbg }}(女)
+		</td>
+		<td>
+			{{ tvb1 }}(一) {{ tvb2 }}(二)<br>
+			{{ tvbb }}(男) {{ tvbg }}(女)
 		</td>
 		<td>
 			{{ all }}<br>
