--- a/stucampus/templates/dreamer/index.html
+++ b/stucampus/templates/dreamer/index.html
@@ -148,7 +148,7 @@
                     <select name="dept1">
                         <option value="--">必选</option>
                         <option value="cbb">采编部</option>
-                        <option value="sjb">技术部</option>
+                        <option value="jsb">技术部</option>
                         <option value="xzb">行政部</option>
                         <option value="sjb">设计部</option>
                         <option value="yyb">运营部</option>
